Implemented hotels list page design

--- a/BookingApp/templates/homepage/why_us.html
+++ b/BookingApp/templates/homepage/why_us.html
@@ -1,6 +1,6 @@
 {% extends 'home/basehome.html' %}
 {% load static %}
-{% block titlename %}Profile{% endblock %}
+{% block title %}Why-Us{% endblock %}
 {% block style %}
 <link rel="stylesheet" href="{% static 'css/newHome/navbar.css' %}" />
 <link rel="stylesheet" href="{% static 'css/newHome/footer.css' %}" />
