--- a/AccountUser/templates/user/owner_profile.html
+++ b/AccountUser/templates/user/owner_profile.html
@@ -1,6 +1,6 @@
 {% extends 'home/basehome.html' %}
 {% load static %}
-{% block titlename %}Profile{% endblock %}
+{% block title %}Profile{% endblock %}
 {% block style %}
 <link rel="stylesheet" href="{% static 'css/newHome/navbar.css' %}" />
 <link rel="stylesheet" href="{% static 'css/newHome/footer.css' %}" />
