--- a/RealEstateApp/templates/property/list_property_user.html
+++ b/RealEstateApp/templates/property/list_property_user.html
@@ -1,7 +1,7 @@
 {% include 'base.html' %}
 {% load static %}
 {% block style %}
-<link rel="stylesheet" href="{% static 'css/property/list_property.css' %}"/>
+{% comment %} <link rel="stylesheet" href="{% static 'css/property/list_property.css' %}"/> {% endcomment %}
 {% endblock %}
  {% block content %}
 <div class="container">
